# ci-template

./: .travis.yml  AUTHORS  CHANGELOG.md  CITemplate.pc.in  CMakeLists.txt  LICENSE  README.md  TODO
doc/: Doxyfile.in  index.doc  using.doc
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  main.cpp
src/gui/Calculator/: CMakeLists.txt  Calculator.pro
src/gui/QtCalculator/: CMakeLists.txt
src/include/: StackCalc.hh  calculator.h
src/lib/: CMakeLists.txt  StackCalc.cpp
src/lib/Calculator/: CMakeLists.txt  calculator.cpp  calculator.ui  moc_calculator.cpp  ui_calculator.h
src/lib/StackCalc/: CMakeLists.txt  StackCalc.cpp
tests/: CMakeLists.txt
tests/CITemplateTestBasic/: tst_CITemplateTestBasic.cpp
tests/CITemplateTestForm/: tst_CITemplateTestForm.cpp
tests/CITemplateTestInternalBasic/: tst_CITemplateTestInternalBasic.cpp
tests/travis/: build-and-test  install-build-depends
